--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "bootstrap-material-design": "~0.3.0",
+    "angular-route": "~1.3.15"
   }
 }
