--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall" : "bower install"
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
@@ -15,12 +15,13 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "bower": "~1.3.12"
   },
-  "browser" : {
-    "jquery" : "/bower_components/jquery/dist/jquery.js",
+  "browser": {
+    "jquery": "/bower_components/jquery/dist/jquery.js",
     "jquery.material": "/bower_components/jquery/dist/jquery.js"
-    },
+  },
   "browserify-shim": {
     "jquery": "$",
     "jquery.material": {
